Basically works. Except logging.